--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -115,7 +115,7 @@ $sizes: (
   100: 100%
 ) !default;
 
-// RTL support by flipping all classes.
+// RTL support flips 'right' and 'left' on attributes. Not on selectors.
 $left:         if($enable-rtl, right, left);
 $right:        if($enable-rtl, left,  right);
 $direction:    if($enable-rtl, rtl,   ltr);
