adds outline badges

--- a/scss/_badge.scss
+++ b/scss/_badge.scss
@@ -45,3 +45,9 @@
     @include badge-variant($value);
   }
 }
+
+@each $color, $value in $theme-colors {
+  .badge-outline-#{$color} {
+    @include badge-outline-variant($value);
+  }
+}
