--- a/scss/mixins/_grid-framework.scss
+++ b/scss/mixins/_grid-framework.scss
@@ -40,6 +40,13 @@
         max-width: none; // Reset earlier grid tiers
       }
 
+      .col#{$infix}-0 {
+        @include make-col(0, $grid-columns);
+        overflow: hidden;
+        padding-left: 0;
+        padding-right: 0;
+      }
+
       @for $i from 1 through $columns {
         .col#{$infix}-#{$i} {
           @include make-col($i, $columns);
