--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -311,6 +311,9 @@ $btn-box-shadow:                 inset 0 1px 0 rgba($white,.15), 0 1px 1px rgba(
 $btn-focus-box-shadow:           0 0 0 3px rgba(theme-color("primary"), .25) !default;
 $btn-active-box-shadow:          inset 0 3px 5px rgba($black,.125) !default;
 
+$btn-active-bg:     darken($background, 7.5%) !default;
+$btn-active-border: darken($border, 10%) !default;
+
 $btn-link-disabled-color:        $gray-600 !default;
 
 $btn-block-spacing-y:            .5rem !default;
