--- a/scss/mixins/_buttons.scss
+++ b/scss/mixins/_buttons.scss
@@ -3,16 +3,16 @@
 // Easily pump out default styles, as well as :hover, :focus, :active,
 // and disabled options for all buttons
 
-@mixin button-variant($background, $border, $active-background: darken($background, 7.5%), $active-border: darken($border, 10%)) {
+@mixin button-variant($background, $border, $btn-active-bg, $btn-active-border) {
   @include color-yiq($background);
   background-color: $background;
   border-color: $border;
   @include box-shadow($btn-box-shadow);
 
   @include hover {
-    @include color-yiq($active-background);
-    background-color: $active-background;
-    border-color: $active-border;
+    @include color-yiq($btn-active-bg);
+    background-color: $btn-active-bg;
+    border-color: $btn-active-border;
   }
 
   &:focus,
@@ -35,9 +35,9 @@
   &:active,
   &.active,
   .show > &.dropdown-toggle {
-    background-color: $active-background;
+    background-color: $btn-active-bg;
     background-image: none; // Remove the gradient for the pressed/active state
-    border-color: $active-border;
+    border-color: $btn-active-border;
     @include box-shadow($btn-active-box-shadow);
   }
 }
