--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -27,17 +27,13 @@
 
   // Disabled comes first so active can properly restyle
   &.disabled,
-  &:disabled,
-  &.disabled:active,
-  &:disabled:active,
-  &.disabled.active,
-  &:disabled.active {
+  &:disabled {
     opacity: .65;
     @include box-shadow(none);
   }
 
-  &:active,
-  &.active {
+  &:not([disabled]):not(.disabled):active,
+  &:not([disabled]):not(.disabled).active {
     background-image: none;
     @include box-shadow($btn-focus-box-shadow, $btn-active-box-shadow);
   }
