--- a/scss/mixins/_buttons.scss
+++ b/scss/mixins/_buttons.scss
@@ -27,17 +27,13 @@
 
   // Disabled comes first so active can properly restyle
   &.disabled,
-  &:disabled,
-  &.disabled:active,
-  &:disabled:active,
-  &.disabled.active,
-  &:disabled.active {
+  &:disabled {
     background-color: $background;
     border-color: $border;
   }
 
-  &:active,
-  &.active,
+  &:not([disabled]):not(.disabled):active,
+  &:not([disabled]):not(.disabled).active,
   .show > &.dropdown-toggle {
     background-color: $active-background;
     background-image: none; // Remove the gradient for the pressed/active state
@@ -64,17 +60,13 @@
   }
 
   &.disabled,
-  &:disabled,
-  &.disabled:active,
-  &:disabled:active,
-  &.disabled.active,
-  &:disabled.active {
+  &:disabled {
     color: $color;
     background-color: transparent;
   }
 
-  &:active,
-  &.active,
+  &:not([disabled]):not(.disabled):active,
+  &:not([disabled]):not(.disabled).active,
   .show > &.dropdown-toggle {
     color: $color-hover;
     background-color: $color;
